--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
-    "nodemailer": "^6.9.11",
-    "socket.io": "^4.7.4",
-    "zustand": "^4.5.2"
+    "nodemailer": "^6.9.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
